--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "prestart": "webpack",
     "start": "electron-forge start",
+    "prepackage": "webpack",
     "package": "electron-forge package",
+    "premake": "webpack",
     "make": "electron-forge make"
   },
   "keywords": [
@@ -32,7 +35,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1"
   },
   "config": {
     "forge": {
