--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "img/onoes.icns"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
